# crates

./: .envrc  .gitignore  Cargo.toml  README.md
bevy/app/: Cargo.toml  justfile
bevy/app/src/: lib.rs
bevy/egui/: Cargo.toml
bevy/egui/src/: easy_link.rs  helper.rs  lib.rs  util.rs
bevy/egui/src/easy_mark/: README.md  easy_mark_viewer.rs  mod.rs
bevy/shape/: Cargo.toml
bevy/shape/src/: circle.rs  lib.rs  offscreen.rs  rectangle.rs  shape.rs  shapes.rs
bevy/util/: Cargo.toml
bevy/util/src/: lib.rs  plugin.rs
bevy/util/src/asset/: markdown_asset.rs
bevy/util/src/bundle/: mod.rs  single_bundle.rs
bevy/util/src/misc/: asset.rs  entity.rs  math.rs  mod.rs  text.rs
bevy/view/: Cargo.toml
bevy/view/src/: lib.rs
bevy/view/src/bundle/: mod.rs  view_bundle.rs
bevy/view/src/layout/: data.rs  grid.rs  view.rs
bevy/view/src/shape/: mod.rs
bevy/view/src/shape/dev/: layout.rs  plugin.rs  theme.rs
bevy/view/src/shape/view/: color_background.rs
common/args/: Cargo.toml
common/args/src/: lib.rs  path.rs  verbose.rs
common/config/: Cargo.toml
common/config/src/: env.rs  lib.rs  loader.rs
common/template/: Cargo.toml
common/template/src/: lib.rs  writer.rs
common/tree/: Cargo.toml  justfile
common/tree/src/: id.rs  lib.rs  macros.rs  tree.rs
common/tree/src/dashmap/: mod.rs
common/tree/src/hashmap/: mod.rs
common/tree/src/impls/: id.rs  tree.rs
common/tree/src/indexmap/: mod.rs
common/tree/src/macros/: id.rs  mod.rs  serde.rs  tree.rs
common/tree/src/serde/: tree.rs
dioxus/app/: Cargo.toml
dioxus/util/: Cargo.toml
tui/app/: Cargo.toml
tui/app/src/: lib.rs  tracing.rs
tui/util/: Cargo.toml
