[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/edger-dev/crates"
repository = "https://github.com/edger-dev/crates"

[workspace]
resolver = "2"
members = [
    "common/tree",
    "common/args",
    "common/config",
    "common/template",

    "bevy/app",
    "bevy/view",
    "bevy/shape",
    "bevy/egui",
    "bevy/util",

    "tui/app",
    "tui/util",
]

[workspace.dependencies]
edger_args = { path = "common/args" }
edger_config = { path = "common/config" }
edger_template = { path = "common/template" }
edger_tree = { path = "common/tree" }

edger_bevy_app = { path = "bevy/app" }
edger_bevy_egui = { path = "bevy/egui" }
edger_bevy_view = { path = "bevy/view" }
edger_bevy_shape = { path = "bevy/shape" }
edger_bevy_util = { path = "bevy/util" }

edger_tui_app = { path = "tui/app" }
edger_tui_util = { path = "tui/util" }

# Common
snafu = "0.7.4"
serde = { version = "1.0.164", features = ["derive", "alloc"] }

clap = { version = "4.3.9", features = [ "derive" ] }

figment = { version = "0.10.10", features = [ "toml", "env" ] }

askama = { version = "0.12.0", features = [ "serde-yaml" ] }
deref-derive = "0.1.0"

rand = "0.8.5"
derive_builder = { version = "0.12.0" }

indexmap = { version = "2.0.0" }
dashmap = { version = "5.5.0" }

# Tui
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-log = "0.1.3"
clap-verbosity-flag = "2.0.1"

# Bevy
bevy = { version = "0.12.1", default-features = false }
bevy_egui = { version = "0.24.0" }
bevy_prototype_lyon = "0.10.0"
anyhow = "1.0"

# [target.'cfg(target_arch = "wasm32")'.workspace.dependencies]
wasm-bindgen = "0.2.87"
console_error_panic_hook = "0.1.7"
gloo-events = "0.2.0"
futures = "0.3.28"
web-sys = { version = "0.3.64", features = [
    "Element", "Document", "Window", "Location", "Url", "UrlSearchParams", "console", "TouchEvent",
    #https://rustwasm.github.io/docs/wasm-bindgen/examples/web-audio.html
    "AudioContext", "AudioDestinationNode", "AudioNode", "AudioParam", "GainNode", "OscillatorNode", "OscillatorType",
]}
