[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/edger-dev/crates"
repository = "https://github.com/edger-dev/crates"

[workspace]
resolver = "2"
members = [
    "common/tree",
    "common/args",
    "common/config",
    "common/template",

    "tui/app",
    "tui/util",
]

[workspace.dependencies]
edger_args = { path = "common/args" }
edger_config = { path = "common/config" }
edger_template = { path = "common/template" }
edger_tree = { path = "common/tree" }

edger_tui_app = { path = "tui/app" }
edger_tui_util = { path = "tui/util" }

# Common
snafu = "0.8.1"
serde = { version = "1.0.164", features = ["derive", "alloc"] }

clap = { version = "4.3.9", features = [ "derive" ] }

figment = { version = "0.10.10", features = [ "toml", "env" ] }

askama = { version = "0.12.0", features = [ "serde-yaml" ] }
deref-derive = "0.1.0"

rand = "0.8.5"
derive_builder = { version = "0.20.0" }

indexmap = { version = "2.0.0" }
dashmap = { version = "5.5.0" }

# Tui
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-log = "0.2.0"
clap-verbosity-flag = "2.0.1"
