[package]
publish = false
name = "edger_bevy_shape"
version = "0.1.0"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/png",
]

[dependencies]
bevy = { workspace = true, default-features = false }
bevy_prototype_lyon = { workspace = true }