[package]
publish = false
name = "edger_config"
version = "0.1.0"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
derive_builder = { workspace = true }