[package]
publish = false
name = "edger_tree"
version = "0.1.0"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serde = [
    "dep:serde",
    "indexmap?/serde",
    "dashmap?/serde",
]

all = [
    "indexmap",
    "dashmap",
    "serde",
]

[dependencies]
tracing = { workspace = true }
indexmap = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
