[package]
publish = false
name = "edger_dioxus_app"
version = "0.1.0"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
]

native = [
    "clap",
]

web = [
    "dioxus-web",
]

daisyui = [
    "web"
    "dioxus-daisyui",
]

all = [
    "native",
    "daisyui",
]

[dependencies]
dioxus = { workspace = true }
dioxus-web = { workspace = true, optional = true }
dioxus-ssr = { workspace = true, optional = true }
dioxus-router = { workspace = true, optional = true }
dioxus-daisyui = { workspace = true, optional = true }

clap = { workspace = true, optional = true }