[package]
publish = false
name = "edger_tui_app"
version = "0.1.0"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

config = [
    "edger_config",
]

template = [
    "edger_template",
]

all = [
    "config",
    "template",
]

[dependencies]
edger_args = { workspace = true }

edger_config = { workspace = true, optional = true }
edger_template = { workspace = true, optional = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
clap-verbosity-flag = { workspace = true }
